--- a/index.html
+++ b/index.html
@@ -5,13 +5,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- stylesheet -->
     <link rel="stylesheet" href="style/style.css">
+
     <title>Leader Board</title>
 </head>
 
 <body>
-    <h1>Leader Board</h1>
+    <!-- header start -->
+    <header>
+        <!-- <h1>Leader Board</h1> -->
 
+    </header>
+    <!-- header end -->
+
+    <!-- main start -->
+    <main>
+        <!-- top players and blogssection -->
+        <section class="container">
+            <div class="top-players">
+                <h2 class="section_title">Top Players</h2>
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h3 class="player-name">Top Player-1</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h3 class="player-name">Top Player-2</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h3 class="player-name">Top Player-3</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h3 class="player-name">Top Player-4</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h3 class="player-name">Top Player-5</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h3 class="player-name">Top Player-6</h3>
+                    </div>
+
+                </div>
+                <hr>
+            </div>
+            <div class="blogs"></div>
+
+        </section>
+
+    </main>
+    <!-- main end -->
+
+    <!-- footer start -->
+    <footer>
+
+    </footer>
+    <!-- footer end -->
 </body>
 
 </html>
