blog section commit

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <main>
         <!-- top players and blogssection -->
         <section class="container">
-            <div class="top-players">
+            <div class="top_players">
                 <h2 class="section_title">Top Players</h2>
                 <div class="players">
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
-                        <h3 class="player-name">Top Player-1</h3>
+                        <h3 class="player_name">Top Player-1</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-2.png" alt="">
@@ -55,7 +55,23 @@
                 </div>
                 <hr>
             </div>
-            <div class="blogs"></div>
+            <div class="blogs">
+                <h2 class="section_title">Top Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-1.png" alt="blog image">
+                        </div>
+                        <div class="blog_ionfo">
+                            <h2 class="blog_title">13 of My Favorite UI/UX Goodies</h2>
+                            <p class="blog_author">
+                                By <a href="">Danny Sapio</a>
+                            </p>
+                        </div>
+                    </article>
+                </div>
+
+            </div>
 
         </section>
 
