--- a/index.html
+++ b/index.html
@@ -55,14 +55,47 @@
                 </div>
                 <hr>
             </div>
-            <div class="blogs">
+            <div class="top_blogs">
                 <h2 class="section_title">Top Blogs</h2>
                 <div class="blogs">
                     <article class="blog">
                         <div class="thumbnail">
                             <img src="images/blogs/blog-1.png" alt="blog image">
                         </div>
-                        <div class="blog_ionfo">
+                        <div class="blog_info">
+                            <h2 class="blog_title">13 of My Favorite UI/UX Goodies</h2>
+                            <p class="blog_author">
+                                By <a href="">Danny Sapio</a>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-2.png" alt="blog image">
+                        </div>
+                        <div class="blog_info">
+                            <h2 class="blog_title">13 of My Favorite UI/UX Goodies</h2>
+                            <p class="blog_author">
+                                By <a href="">Danny Sapio</a>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="blog image">
+                        </div>
+                        <div class="blog_info">
+                            <h2 class="blog_title">13 of My Favorite UI/UX Goodies</h2>
+                            <p class="blog_author">
+                                By <a href="">Danny Sapio</a>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-4.png" alt="blog image">
+                        </div>
+                        <div class="blog_info">
                             <h2 class="blog_title">13 of My Favorite UI/UX Goodies</h2>
                             <p class="blog_author">
                                 By <a href="">Danny Sapio</a>
