course section done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- stylesheet -->
+    <link rel="stylesheet" href="resource/fontawesome-free-6.1/css/all.css">
     <link rel="stylesheet" href="style/style.css">
 
     <title>Leader Board</title>
@@ -105,8 +106,84 @@
                 </div>
 
             </div>
+        </section>
+
+        <!-- latest courses start-->
+        <section class="container">
+            <div class="latest_courses">
+                <h2 class="section_title">Latest Courses</h2>
+            </div>
+            <div class="courses">
+                <div class="course">
+                    <div class="course_banner">
+                        <img src="images/courses/course-1.png" alt="course image">
+                    </div>
+                    <h2 class="course_title">React - The Complete Guide 2022</h2>
+                    <p class="mentor">Reed Krakoff</p>
+
+                    <div class="course_info">
+                        <div class="star">
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                        </div>
+                        <div class="rating">4.5</div>
+                        <div class="course_duration">
+                            <i class="fa-regular fa-clock"></i>
+                            1.30 hr
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course_banner">
+                        <img src="images/courses/course-2.png" alt="course image">
+                    </div>
+                    <h2 class="course_title">React - The Complete Guide 2022</h2>
+                    <p class="mentor">Reed Krakoff</p>
+
+                    <div class="course_info">
+                        <div class="star">
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                        </div>
+                        <div class="rating">4.5</div>
+                        <div class="course_duration">
+                            <i class="fa-regular fa-clock"></i>
+                            1.30 hr
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course_banner">
+                        <img src="images/courses/course-3.png" alt="course image">
+                    </div>
+                    <h2 class="course_title">React - The Complete Guide 2022</h2>
+                    <p class="mentor">Reed Krakoff</p>
+
+                    <div class="course_info">
+                        <div class="star">
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                        </div>
+                        <div class="rating">4.5</div>
+                        <div class="course_duration">
+                            <i class="fa-regular fa-clock"></i>
+                            1.30 hr
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </section>
+        <!-- latest courses end-->
 
     </main>
     <!-- main end -->
