--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
 
 <body>
     <!-- header start -->
-    <header>
-        <!-- <h1>Leader Board</h1> -->
-
-    </header>
+    <header></header>
     <!-- header end -->
 
     <!-- main start -->
@@ -34,23 +31,23 @@
                     </div>
                     <div class="player">
                         <img src="images/players/player-2.png" alt="">
-                        <h3 class="player-name">Top Player-2</h3>
+                        <h3 class="player_name">Top Player-2</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-3.png" alt="">
-                        <h3 class="player-name">Top Player-3</h3>
+                        <h3 class="player_name">Top Player-3</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-4.png" alt="">
-                        <h3 class="player-name">Top Player-4</h3>
+                        <h3 class="player_name">Top Player-4</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-5.png" alt="">
-                        <h3 class="player-name">Top Player-5</h3>
+                        <h3 class="player_name">Top Player-5</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
-                        <h3 class="player-name">Top Player-6</h3>
+                        <h3 class="player_name">Top Player-6</h3>
                     </div>
 
                 </div>
